--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CapitalActivity"></activity>
+        <activity android:name=".DashboardActivity"></activity>
+        <activity android:name=".AddWordActivity" />
+        <activity android:name=".CapitalActivity" />
         <activity
             android:name=".MainActivity"
             android:label="My Dictionary">
